# mini-commander

./: ChangeLog  ChangeLog~  Makefile  Makefile.am  ProjectHome.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.10  output.4  output.5  output.7  output.8  output.9  requests  traces.0  traces.1  traces.10  traces.11  traces.3  traces.4  traces.5
data/: GNOME_MiniCommanderApplet.server.in.in  Makefile  Makefile.am  Makefile.in  fuckedoffGNOME_MiniCommanderApplet.server.in.in
data/untitled folder/: GNOME_MiniCommanderApplet (copy).server.in
help/: Makefile
po/: POTFILES  POTFILES.in  ar.po  as.po  be.po  be@latin.gmo  bg.gmo  bg.po  bn.po  bn_IN.gmo  bn_IN.po  ca.po  cs.po  cy.po  de.po  dz.po  el.gmo  en_CA.po  en_GB.po  es.po  es_AR.po  es_CO.po  es_ES.gmo  es_ES.po  es_GT.po  es_MX.po  es_PE.po  es_PR.po  es_SV.po  es_UY.po  et.gmo  et.po  eu.gmo  fa.po  fi.gmo  fi.po  ga.gmo  gl.po  hr.gmo  hr.po  (+45 more)
src/: Makefile.in  about.c  help.c
src/.deps/: cmd_completion.Po  help.Po  macro.Po  preferences.Po
trunk/: AUTHORS  ChangeLog  Makefile.am~  Makefile.in  NEWS  TODO  config.h  config.status  config.status.lineno  configure.ac  configure.ac~
trunk/autom4te.cache/: output.1  output.11  output.3  output.6  traces.2  traces.6  traces.7  traces.8  (+1 more)
trunk/src/: Makefile  Makefile.am  command_line.c  command_line.h  icon-entry.c  icon-entry.h  mini-commander_applet.c  mini-commander_applet.h
trunk/src/.deps/: about.Po  command_line.Po  exec.Po  history.Po  mc-install-default-macros.Po  mini-commander_applet.Po
(+79 files in other folders)
